index.css Organization

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 
         <div id="main-landing">
             <ul>
-                <li id="picture">
-                    <img src="fonts_and_assets/profile_pic.jpeg" id="about-pic" alt="Picture">
+                <li id="landing-headshot-li">
+                    <img src="fonts_and_assets/profile_pic.jpeg" id="headshot" alt="Picture">
                 </li>
 
-                <li id="about">
+                <li id="landing-about-li">
                     <div>
-                        <div id="name-div">Nick Grove</div>
+                        <div id="name">Nick Grove</div>
                         <p>I am a Front-End Developer and an aspiring UI/UX Designer who is well-versed in 
                             CSS/HTML and continuing to expand my knowledge in JavaScipt, React, and Typescript.</p>
-                        <a id="download-a" href="files/Resume.pdf" download>
+                        <a id="download" href="files/Resume.pdf" download>
                             <div id="download-button">Download My Resume</div>
                         </a> 
                     </div>
