--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="index.css" rel="stylesheet">
+        <link href="about.css" rel="stylesheet">
         <title>Nick Grove Development and Design</title>
     </head>
 
@@ -29,6 +30,20 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+        </div>
+
+        <div class="about-div">
+            <div class="title">About Me</div>
+            <p class="description">I am a Developer with past experience in Mobile Development (specifically iOS) and have most recently have gotten a start in Front-End Development. 
+            I attended the University of Iowa and graduated with a Bachelor's Degree in Computer Science & Engineering, from my time at Iowa I learned a lot C++ and Java and towards the end
+            of my college career I got some experience in Full-Stack Web Development and Software Engineering concepts and practices. Since graduation, I have leaned more about Front-End 
+            Development and also making a shift towards UI/UX Design. I am somewhat of a novice in these fields but I feel like they are a good fit for what I want to do with my life which is 
+            Web Development/Design. When it comes to Front-End Development I am eager to learn, and as of right now I know a good amount of JavaScript, but I am continuing learn more, while also
+            beginning to learn React, Typescript, and the Fundamentals of Design such as Color Theory, Design Patterns, etc.</p>
+        </div>
+
+        <div class="about-div">
+            <div class="title">About The Site</div>
         </div>
     </body>
 </html>
