Github Links Check

--- a/about.html
+++ b/about.html
@@ -34,16 +34,21 @@
 
         <div class="about-div">
             <div class="title">About Me</div>
-            <p class="description">I am a Developer with past experience in Mobile Development (specifically iOS) and have most recently have gotten a start in Front-End Development. 
+            <p class="description">I am a Developer with experience in Mobile Development (specifically iOS) and have most recently have gotten a start in Front-End Development. 
             I attended the University of Iowa and graduated with a Bachelor's Degree in Computer Science & Engineering, from my time at Iowa I learned a lot C++ and Java and towards the end
-            of my college career I got some experience in Full-Stack Web Development and Software Engineering concepts and practices. Since graduation, I have leaned more about Front-End 
+            of my college career, I got some experience in Full-Stack Web Development and Software Engineering concepts and practices. Since graduation, I have learned more about Front-End 
             Development and also making a shift towards UI/UX Design. I am somewhat of a novice in these fields but I feel like they are a good fit for what I want to do with my life which is 
-            Web Development/Design. When it comes to Front-End Development I am eager to learn, and as of right now I know a good amount of JavaScript, but I am continuing learn more, while also
-            beginning to learn React, Typescript, and the Fundamentals of Design such as Color Theory, Design Patterns, etc.</p>
+            Web Development/Design. When it comes to Front-End Development I am eager to learn, and as of right now I know a good amount of JavaScript, but I am continuing to learn more, while 
+            also beginning to learn React, Typescript, and the Fundamentals of Design such as Color Theory, Design Patterns, etc.</p>
         </div>
 
         <div class="about-div">
             <div class="title">About The Site</div>
+            <p class="description">I wanted this site to act as a portfolio for my best projects, provide my contact info, all of that great stuff while also showcasing my Web Development and Design 
+            skills as I continue to improve. This site is still in its early stages so there is much more design ideas to come but for now, its just a place for anyone to get to know what 
+            I've done and what I am working on. Even this "About The Site" section will have more in the future with a look at the color scheme, my process, and where I got inspiration 
+            from.
+            </p>
         </div>
     </body>
 </html>
