--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div id="contact-and-gradient">
-            <div id="contact-div">
-                <!-- <ul>
+            <!-- <div id="contact-div">
+                <ul>
                     <li id="github">
                         <a href="https://github.com/Feauv">
                             <img src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="Github" height="30px" width="30px">
@@ -64,9 +64,8 @@
                 <div id="email">
                     <img src="fonts_and_assets/email@2x.png" alt="email" height="25px" width="30px">
                 </div>
-                 -->
                 Contact Info Div Coming Soon
-            </div>
+            </div> -->
         </div>
 
     </body>
