--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="index.css" rel="stylesheet">
+        <link href="about.css" rel="stylesheet">
         <title>Nick Grove Development and Design</title>
     </head>
 
@@ -29,6 +30,18 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+        </div>
+
+        <div class="project-div">
+            <div class="title">SplitNote</div>
+            <p class="description">
+            </p>
+        </div>
+
+        <div class="project-div">
+            <div class="title">Scheduling Web App</div>
+            <p class="description">
+            </p>
         </div>
     </body>
 </html>
