Projects Ready for Write-Up

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="index.css" rel="stylesheet">
-        <link href="about.css" rel="stylesheet">
+        <link href="projects.css" rel="stylesheet">
         <title>Nick Grove Development and Design</title>
     </head>
 
@@ -39,7 +39,19 @@
         </div>
 
         <div class="project-div">
-            <div class="title">Scheduling Web App</div>
+            <div class="title">Scheduler Web App</div>
+            <p class="description">
+            </p>
+        </div>
+
+        <div class="project-div">
+            <div class="title">GVE</div>
+            <p class="description">
+            </p>
+        </div>
+
+        <div class="project-div">
+            <div class="title">Live Temperature Graph</div>
             <p class="description">
             </p>
         </div>
