SplitNote Description Finished

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
 
     <body>
         <div id='bar'>
-            <ul id="info-bar">
+            <!-- <ul id="info-bar">
                 <li>
                     <img id='profile-pic' src="fonts_and_assets/generic_profile_pic.jpeg" alt="Test Profile Pic"
                     height="30px" width="30px">
                 </li>
-            </ul>
+            </ul> -->
 
             <ul id="nav-bar">
                 <li class="nav-bar-page">
