--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
 
     <body>
         <div id='bar'>
-            <ul id="info-bar">
+            <!-- <ul id="info-bar">
                 <li>
                     <img id='profile-pic' src="fonts_and_assets/generic_profile_pic.jpeg" alt="Test Profile Pic"
                     height="30px" width="30px">
                 </li>
-            </ul>
+            </ul> -->
 
             <ul id="nav-bar">
                 <li class="nav-bar-page">
@@ -33,26 +33,61 @@
         </div>
 
         <div class="project-div">
-            <div class="title">SplitNote</div>
+            <div class="title">SplitNote (Fall 2018) 
+                <a href="https://github.com/Feauv/SplitNote">
+                    <img class="github-image" src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="SplitNote Github" height="30px" width="30px">
+                </a>
+            </div>
+            <div class="keywords">Swift, Xcode</div>
+            <p class="description">My first ever Hackathon was TigerHacks in Missouri University and I came into not expecting much, just to learn. Coming into the event I really just had experience 
+                in iOS Development outside of the classroom and I wanted to expand my knowledge on it. I ended grouping up with these two IT majors who went to Missouri and they knew a lot about 
+                iOS Development.TigerHacks theme was Media, so we set out to create a mobile application that could be used to record, transcribe the recording in real-time, and implement 
+                functionality for the user to flag and take notes on certain parts of the trancription/record. We thought this we be a great utility for interviews, meetings, anything that you 
+                wanted recorded that you wanted to analyze and take notes on.
+            </p>
+            <div class="subtitle">User Interface</div>
+            <p class="description">My primary role within the group was to design and program the user interface. I wanted the application to flow while also being aesthetically pleasing. I 
+                created a simple to understand home screen that gave the user a New option to create a new Note(what we called the record/transcriptions), an Open option to view all their saved 
+                Notes, and a view of all their recent Notes. When the user chose the New option they were directed to a dashboard type setup where they can record, flag, and type notes at flags. 
+                The Open option took the user to their folders of Notes if you directed into a folder and chose a Note a Player type screen would pop up and this is where is the user could 
+                playback their Notes. When I look back at this user interface there is a ton I would change to it, but the more I think about it, it was a Hackathon and I was an inexperienced 
+                programmer so it makes sense why it may not be the best.
+            </p>
+            <div class="subtitle">Implementations</div>
+            <p class="description">Like most Hackathon projects, there was a ton of implementations that we did not end up finishing. The main ones were Core Data, Flags, and the Player. For 
+                demoing our application it was not hard because we had mock data to show how it would look if you had Notes, and our main functionality that we wanted finished was the text to 
+                speech, so we were able to show that off.
+            </p>
+            <div class="subtitle">Takeaways</div>
+            <p class="description">I think building SplitNote really put into perspective how much goes into app development and it was great experience to meet so many developers and see what 
+                people made. Seeing all of those projects and working on our projects improved me as a developer and designer, its just a shame that Hackathons are so short.
+            </p>
+            <div class="notes">Additional Notes: If you are demoing the application inside Xcode, iPhone 11 is the best to run it on. We did not have much time to make it responsive at 
+                the Hackathon.
+            </div>
+        </div>
+
+        <div class="project-div">
+            <div class="title">Live Temperature Graph (Fall 2019)
+                <a href="https://github.com/Dylan-Gardner/Lab1-Senior-Design">
+                    <img class="github-image" src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="GVE Github" height="30px" width="30px">
+                </a>
+            </div>
+            <div class="keywords">JavaScript, D3</div>
             <p class="description">
+                Description Coming Soon
             </p>
         </div>
 
         <div class="project-div">
-            <div class="title">Scheduler Web App</div>
+            <div class="title">GVE (Summer 2018)
+                <a href="https://github.com/Feauv/GVE">
+                    <img class="github-image" src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="GVE Github" height="30px" width="30px">
+                </a>
+            </div>
+            <div class="keywords">Swift, Xcode, Sympli</div>
             <p class="description">
-            </p>
-        </div>
-
-        <div class="project-div">
-            <div class="title">GVE</div>
-            <p class="description">
-            </p>
-        </div>
-
-        <div class="project-div">
-            <div class="title">Live Temperature Graph</div>
-            <p class="description">
+                Description Coming Soon
             </p>
         </div>
     </body>
