Basic Aspects of the Site Finished

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="index.css" rel="stylesheet">
+        <link href="contact.css" rel="stylesheet">
         <title>Nick Grove Development and Design</title>
     </head>
 
@@ -29,6 +30,18 @@
                     <a href="contact.html" id="current">Contact</a>
                 </li>
             </ul>
+        </div>
+
+        <div class="contact-div">
+            <div class="title">Want to get in touch?</div>
+            <div class="sub-contact-div">Email: nickgrove.se@gmail.com</div>
+            <div class="sub-contact-div">Phone: (502) 777-6847</div>
+            <div class="sub-contact-div"><a href="https://www.linkedin.com/in/nick-grove-9417b6199/">LinkedIn</a></div>
+        </div>
+
+        <div class="contact-div">
+            <div class="title">Check out my projects:</div>
+            <div class="sub-contact-div"><a href="https://github.com/Feauv">Github</a></div>
         </div>
     </body>
 </html>
