--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,9 @@
                 </a>
             </div>
             <div class="keywords">Swift, Xcode</div>
-            <p class="description">My first ever Hackathon was TigerHacks in Missouri University and I came into not expecting much, just to learn. Coming into the event I really just had experience 
-                in iOS Development outside of the classroom and I wanted to expand my knowledge on it. I ended grouping up with these two IT majors who went to Missouri and they knew a lot about 
+            <p class="description">My first ever Hackathon was TigerHacks in Missouri University and I came into not expecting much, just to learn. Coming into the event I really just had 
+                experience in iOS Development outside of the classroom and I wanted to expand my knowledge on it. I ended grouping up with these two IT majors 
+                <a href="https://github.com/okrek6">Brendan Krekeler</a> and <a href="https://github.com/nathanb95">Nathan Banderas</a> went to Missouri and they knew a lot about 
                 iOS Development.TigerHacks theme was Media, so we set out to create a mobile application that could be used to record, transcribe the recording in real-time, and implement 
                 functionality for the user to flag and take notes on certain parts of the trancription/record. We thought this we be a great utility for interviews, meetings, anything that you 
                 wanted recorded that you wanted to analyze and take notes on.
@@ -74,21 +75,40 @@
                 </a>
             </div>
             <div class="keywords">JavaScript, D3</div>
-            <p class="description">
-                Description Coming Soon
+            <p class="description">For my Principles of Senior Design course at the University of Iowa we had various labs that prepared us for Senior Design course in the Spring where we 
+                would work on our Engineering capstone project. The lab I enjoyed the most and felt I learned a lot from was Lab 1 where we had to use a microcontroller with a temperature sensor 
+                to send temperature data to a Web App that would live temperature on a graph while also give functionality to set text updates. Both of my teammates 
+                <a href="https://github.com/RichDeFano">Rich DeFano</a> and <a href="https://github.com/Dylan-Gardner">Dylan Gardner</a> knew a lot about hardware and setting up the server, so 
+                my focus was the Web App which meant learning JavaScript and becoming familiar with D3 a JavaScript Data Visualization Library. The main challenges of this Front-End were 
+                creating an interface that was great at relaying data to user, and learning JavaScript and D3 from scratch. I made sure that I constructed an interface that was in one window 
+                and not cluttered but after that learning D3 was the hardest part. The most challenging part of my experience with D3 was programming our graph to continually update which 
+                honestly took as much time as it took me to program the interface. Once we were finished it was a very satisfying project to witness, definitely one of best Embedded Systems 
+                projects I have ever worked on. This lab was a great experience for what I want to do as a developer and I learned a lot from my teammates. Introducing myself to JavaScript and D3 was 
+                interesting and a library like D3 is a insanely versatile tool for Data Visualization. 
             </p>
         </div>
 
         <div class="project-div">
             <div class="title">GVE (Summer 2018)
                 <a href="https://github.com/Feauv/GVE">
-                    <img class="github-image" src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="GVE Github" height="30px" width="30px">
+                    <img id="github-image" src="fonts_and_assets/GitHub-Mark/PNG/GitHub-Mark-64px.png" alt="GVE Github" height="30px" width="30px">
+                </a>
+                <a href="https://www.indiegogo.com/projects/gve-a-revolutionary-philanthropic-app#/">
+                    <img id="indiegogo-image" src="fonts_and_assets/gve.jpg" alt="GVE Indiegogo" height="30px" width="30px">
                 </a>
             </div>
             <div class="keywords">Swift, Xcode, Sympli</div>
-            <p class="description">
-                Description Coming Soon
+            <p class="description">In the Summer after my Sophomore year I was hired as an intern for True Industries, a company out of Bowling Green, Kentucky that had previously worked on 
+                mostly game development and design. At True I worked GVE which was an application they were outsourced to create that strived to connect people to their favorite charities 
+                financially. The one big idea of GVE was they wanted to implement a round-up functionality, like what you see for an application like 
+                <a href="https://www.acorns.com/?s1=adwords&s2=desktopbrand&s3=acornsexact&gclid=Cj0KCQjw3ZX4BRDmARIsAFYh7ZLsLgfJ1HrFfwHHSPRupq1JHvQZlsnWdhGgMny_-aC-TH3mlBzFWuEaAvpHEALw_wcB">Acorns</a> 
+                where instead of rounding up the cents on your purchases for investing, they rounded up for charities. So my job was to program an interface based off of the mock-ups I was given 
+                on <a href="https://sympli.io/">Sympli</a> which is essentially a design collaboration plugin, while also working with the Plaid API, a widely used financial API that enables 
+                user to log into their bank accounts. Ultimately True Industries ended up dropping the project for business reasons, but I learned a ton of Swift in my time with True and I so 
+                glad I got to work with such a well-known API like Plaid. It was a shame that GVE fell through but the knowledge I got from the experience was amazing.
             </p>
+            <div class="notes">Additional Notes: You can click GVE's logo up by the title to check out their Indiegogo page.
+            </div>
         </div>
     </body>
 </html>
