--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             of my college career, I got some experience in Full-Stack Web Development and Software Engineering concepts and practices. Since graduation, I have learned more about Front-End 
             Development and also making a shift towards UI/UX Design. I am somewhat of a novice in these fields but I feel like they are a good fit for what I want to do with my life which is 
             Web Development/Design. When it comes to Front-End Development I am eager to learn, and as of right now I know a good amount of JavaScript, but I am continuing to learn more, while 
-            also beginning to learn React, Typescript, and the Fundamentals of Design such as Color Theory, Design Patterns, etc.</p>
+            also beginning to learn React, Typescript, and the Fundamentals of Design</p>
         </div>
 
         <div class="about-div">
