--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </ul>
         </div>
 
-        <div id="contact-and-gradient">
+        <div id="gradient">
             <!-- <div id="contact-div">
                 <ul>
                     <li id="github">
